--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.5.5",
     "@mdxeditor/editor": "^3.14.0",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-three/drei": "^9.112.0",
@@ -24,6 +25,7 @@
     "next-theme": "^0.1.5",
     "next-themes": "^0.3.0",
     "openai": "^4.67.3",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
